--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="heroblur">
     <section class="hero">
             <ul class="nav">
-                <li><a href="#intro">IT Services</a></li>
+                <li><a href="#intro">ENYFS</a></li>
                 <li><a href="#solutions">Solutions</a></li>
                 <li><a href="#" id="aboutBtn">AboutUs</a></li>
                 <li><a href="#" id="basBtn">Book a Service</a></li>
