api-end-point-changed(vercel)

--- a/index.html
+++ b/index.html
@@ -80,29 +80,29 @@
             <hr class="hr">
             <div class="checkbox-group">
                 <label class="custom-checkbox">
-                  <input type="checkbox" name="service" value="Cleaning">
+                  <input type="checkbox" name="service" value="Mobile App (iOS/Android)">
                   <!-- <span class="checkmark"></span> -->
                   Mobile App (iOS/Android)
                 </label>
                 <label class="custom-checkbox">
-                  <input type="checkbox" name="service" value="Repair">
+                  <input type="checkbox" name="service" value="Website Development">
                   <span class="checkmark"></span>
                   Website Development 
                 </label>
                 <label class="custom-checkbox">
-                  <input type="checkbox" name="service" value="Installation">
+                  <input type="checkbox" name="service" value="SaaS Solutions (custom app)">
                   <span class="checkmark"></span>
                   SaaS Solutions (custom app)
                 </label>
                 <label class="custom-checkbox">
-                  <input type="checkbox" name="service" value="Consultation">
+                  <input type="checkbox" name="service" value="AI Applications (machine learning)">
                   <span class="checkmark"></span>
                   AI Applications (machine learning)
                 </label>
               </div>
               <input type="text"  placeholder="Your business email" class="emailInput"/>
               <textarea type="text"  placeholder="Describe your need based on the chosen service." class="descInput"></textarea>
-            <button class="secModalClose basModalClose">Send</button>
+            <button class="secModalClose basModalClose" id="sendMessage">Send</button>
         </div>
     </div>
 
