side menu bar icon

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#solutions">Solutions</a></li>
                 <li><a href="#" id="aboutBtn">AboutUs</a></li>
                 <li><a href="#" id="basBtn">Book a Service</a></li>
-                <li><a id="toggleBtn" class="toggleBtn">O</a></li>
+                <li><a class="toggleBtn"><i id="toggleBtn" class="fa-solid fa-bars"></i></a></li>
             </ul>
             <ul class="navMobile">
                 <!-- <li><a href="#intro">X</a></li> -->
